@@ -1,3 +1,7 @@
+* May 1, 2008, Anthony Morphett *
+
+Documentation updates and bugfixes for BitmapImage relating to Bitmap::SHARE_FRAMEBUFFER flag
+
 * April 22, 2008, Kristian Van Der Vliet *
 
 Patches from Anthony Morphett
