@@ -32,7 +32,7 @@ Jake Hamby <jhamby@pobox.com>
 Henrik Isaksson <henrik@isaksson.tk>
 Ville Kallioniemi <festivus@mbnet.fi>
 Arno Klenke <arno_klenke@yahoo.de>
-Anthony Morphett <tonymorph@yahoo.com>
+Anthony Morphett <awmorp@gmail.com>
 Jack Tonkin <lists@tonkin.org.uk>
 Kristian Van Der Vliet <vanders@liqwyd.com>
 
